--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -64,34 +64,34 @@
                             id="navbar-example">
                             <ul class="nav navbar-nav navbar-right">
                                 <li class="active">
-                                    <a class="page-scroll" href="#home">Home</a>
+                                    <a class="page-scroll" href="{% url 'home' %}">Home</a>
                                 </li>
                                 <li>
-                                    <a class="page-scroll" href="#about">About</a>
+                                    <a class="page-scroll" href="{% url 'establish' %}">about 또봄</a>
                                 </li>
                                 <li>
-                                    <a class="page-scroll" href="#services">Services</a>
+                                    <a class="page-scroll" href="{% url 'business' %}">사업소개</a>
                                 </li>
                                 <li>
-                                    <a class="page-scroll" href="#team">Team</a>
+                                    <a class="page-scroll" href="{% url 'team' %}">또봄 사람들</a>
                                 </li>
                                 <li>
-                                    <a class="page-scroll" href="#portfolio">Portfolio</a>
-                                </li>
-
-                                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Drop
-                                        Down<span class="caret"></span></a>
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li><a href=#>Drop Down 1</a></li>
-                                        <li><a href=#>Drop Down 2</a></li>
-                                    </ul>
-                                </li>
-
-                                <li>
-                                    <a class="page-scroll" href="#blog">News</a>
+                                    <a class="page-scroll" href="{% url 'activity' %}">또봄 활동</a>
                                 </li>
                                 <li>
-                                    <a class="page-scroll" href="#contact">Contact</a>
+                                    <a class="page-scroll" href="{% url 'news' %}">News</a>
+                                </li>
+                                <li>
+                                    <a class="page-scroll" href="{% url 'event' %}">이벤트</a>
+                                </li>
+                                <li>
+                                    <a class="page-scroll" href="{% url 'scontent' %}">소셜채널 컨텐츠</a>
+                                </li>
+                                <li>
+                                    <a class="page-scroll" href="{% url 'support' %}">후원하기</a>
+                                </li>
+                                <li>
+                                    <a class="page-scroll" href="{% url 'map' %}">오시는길</a>
                                 </li>
                             </ul>
                         </div>
