--- a/home/templates/map.html
+++ b/home/templates/map.html
@@ -1,135 +1,45 @@
 <!--오시는길 페이지-->
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>오시는 길</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{%block content %}
+<div class="container">
+    <h1 class="text-center">오시는 길</h1>
+    <hr>
+    <div class="row">
+        <div class="col-sm-8">
 
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+            <div id="daumRoughmapContainer1606110905572" class="col-sm-8 root_daum_roughmap root_daum_roughmap_landing">
+            </div>
 
-    <!-- Bootstrap core CSS -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+            <script charset="UTF-8" class="daum_roughmap_loader_script"
+                src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
 
-    <!-- Libraries CSS Files -->
-    <link href="/static/lib/nivo-slider/css/nivo-slider.css" rel="stylesheet">
-    <link href="/static/lib/owlcarousel/owl.carousel.css" rel="stylesheet">
-    <link href="/static/lib/owlcarousel/owl.transitions.css" rel="stylesheet">
-    <link href="/static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/static/lib/animate/animate.min.css" rel="stylesheet">
-    <link href="/static/lib/venobox/venobox.css" rel="stylesheet">
-
-    <!-- Nivo Slider Theme -->
-    <link href="/static/css/nivo-slider-theme.css" rel="stylesheet">
-
-    <!-- Main Stylesheet File -->
-    <link href="/static/css/style.css" rel="stylesheet">
-
-    <!-- Responsive Stylesheet File -->
-    <link href="/static/css/responsive.css" rel="stylesheet">
-
-    <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900"
-        rel="stylesheet">
-</head>
-
-<body>
-<div class="row">
-   <div class="container">
-    <ul class="nav nav-tabs">
-        <li class="nav-item">
-            <a class="nav-link active" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-    </ul>
-    <div class="page-header" style="text-align: center;">
-        <div class="col-md-6 col-md-offset-3">
-            <h3>오시는 길</h3>
+            <!-- 실행 스크립트-->
+            <script charset="UTF-8">
+                new daum.roughmap.Lander({
+                    "timestamp": "1606110905572",
+                    "key": "233or",
+                    "mapWidth": "100%",
+                    "mapHeight": "360",
+                    "frameborder": "0"
+                }).render();
+            </script>
         </div>
-    </div>
-    <div class="col-md-6 col-sm-6 col-xs-12">
-        <!-- Start Map -->
-        <div id="daumRoughmapContainer1606110905572" class="root_daum_roughmap root_daum_roughmap_landing"></div>
-        
-        <script charset="UTF-8" class="daum_roughmap_loader_script"
-            src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
-        
-        <!-- 실행 스크립트-->
-        <script charset="UTF-8">
-            new daum.roughmap.Lander({
-                "timestamp": "1606110905572",
-                "key": "233or",
-                "mapWidth": "100%",
-                "mapHeight": "360",
-                "frameborder":"0"
-            }).render();
-        </script>
         <!-- End Map -->
-    </div>
-    <div class="col-md-6 col-sm-6 col-xs-12" style="text-align:center; padding-top:30px;">
-        <h3>후원 문의 및 연락처</h3>
-        <!--<div class="span4">
-            <h4>Contact Us</h4>
-            <address>
-                <strong>또봄</strong><br>
-                15 Springfield Way<br>
-                Hythe<br>
-                Kent<br>
-                United Kingdon<br>
-                CT21 5SH<br>
-                <abbr title="Phone">P:</abbr> 01234 567 890
-            </address>
-        </div>-->
-        <div class="col-sm-12 col-md-6 col-lg-3 my-5">
-            <div class="card border-0">
-                <div class="card-body text-center">
-                    <i class="fa fa-phone fa-5x mb-3" aria-hidden="true"></i>
-                    <h4 class="text-uppercase mb-5">연락처</h4>
-                    <p>010-9414-4879</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3 my-5">
-            <div class="card border-0">
-                <div class="card-body text-center">
-                    <i class="fa fa-map-marker fa-5x mb-3" aria-hidden="true"></i>
-                    <h4 class="text-uppercase mb-5">office loaction</h4>
-                    <address>서울 강남구 테헤란로2길 8,4층 17호(역삼동, 마이워크 스페이스) “또봄”</address>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3 my-5">
-            <div class="card border-0">
-                <div class="card-body text-center">
-                    <i class="fa fa-globe fa-5x mb-3" aria-hidden="true"></i>
-                    <h4 class="text-uppercase mb-5">office loaction</h4>
-                    <address>Suite 02, Level 12, Sahera Tropical Center </address>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3 my-5">
-            <div class="card border-0">
-                <div class="card-body text-center">
-                    <i class="fa fa-facebook fa-5x mb-3" aria-hidden="true"></i>
-                    <h4 class="text-uppercase mb-5">email</h4>
-                    <p>http://al.a.noman1416@gmail.com</p>
-                </div>
-            </div>
+
+        <div class="col-sm-4" id="contact2">
+            <h3>후원 문의 및 연락처</h3>
+            <hr align="left" width="50%">
+            <h4 class="pt-2">주소</h4>
+            서울특별시 강남구 테헤란로 2길 8,<br> 4층 17호(역삼동, 마이워크 스페이스) “또봄”<br>
+            <h4 class="pt-2">연락처</h4>
+            010-9414-4879<br>
+            <h4 class="pt-2">Email</h4>
+            iseeuagain17@gmail.com<br>
+            <h4 class="pt-2">YouTube</h4>
+            "또또봄tv"<br>
         </div>
     </div>
-    </div>
-</div>  
-</body>
+</div>
+
+{%endblock%}
