--- a/home/templates/support.html
+++ b/home/templates/support.html
@@ -3,97 +3,111 @@
 
 {%block content %}
 <div class="container">
-    <div class="page-header text-center">
-        <div class="col-md-12 col-md-offset-3">
-            <h2>후원 하기</h3>
-         </div>
-    </div>
-
-    <div class="col-md-6 col-sm-6 col-xs-12">
-        <div id="accordion">
-            <div class="card">
-                <div class="card-header" id="headingOne">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
-                            aria-controls="collapseOne">
-                            #1
-                        </button>
-                    </h5>
-                </div>
-        
-                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                    <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod
+        <div class="page-header text-center">
+            <div class="col-md-12 col-md-offset-3">
+                <h2>후원 하기</h3>
+            </div>
+        </div>
+    <div class="row" style="padding-top: 20px;">
+        <div class="col-md-6 col-sm-6 col-xs-12">
+            <div id="accordion">
+                <div class="card">
+                    <div class="card-header" id="headingOne">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+                                aria-controls="collapseOne" style="color:#000;">
+                                후원 절차
+                            </button>
+                        </h5>
+                    </div>
+            
+                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div class="card-body">
+                            또봄에 후원을 하는 절차를 안내 해 드립니다.<br>
+                            후원 방식은 두 가지 중 선택하시면 됩니다.<br>
+                            또봄에 직접 후원하는 방식, <a href="http://kcscancer.org/" target="blank">대한암협회</a>를 통해 후원하는 방식 두 가지 입니다.<br>
+                            세금공제를 원하시는 분은 <a href="http://kcscancer.org/" target="blank">대한암협회</a>를 통해 후원해주시기 바랍니다.<br>
+                            또봄 후원활동에 감사 드립니다.<br>
+                            후원하신 모든 회원께서는 자동으로 후원자로 등록 됨을 알려드립니다.
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="card">
-                <div class="card-header" id="headingTwo">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
-                            aria-expanded="false" aria-controls="collapseTwo">
-                            #2
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                    <div class="card-body">
-                        Anim pariatur cliche
+                <div class="card">
+                    <div class="card-header" id="headingTwo">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+                                aria-expanded="false" aria-controls="collapseTwo" style="color:#000;">
+                                후원금 사용처
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                        <div class="card-body">
+                            1. 암 경험자간 소통 모임 기획 및 지원<br>
+                            2. 여행버킷챌린지 ‘앎’ 캠페인<br>
+                            3. 의학, 치료제 관련 의학 세미나 개최<br>
+                            4. 유튜브 채널 운영<br>
+                            5. 온라인/오프라인 홍보 브로셔 발간<br>
+                            6. 홍보 영상 제작/배포<br>
+                            7. 기타 법인의 목적 달성에 필요한 사업 등에 사용됩니다.<br>
+                            자세한 사항은 <a href="http://127.0.0.1:8000/home/business">**사업소개 항목에 링크를 걸어두었습니다.</a>에서 보실 수 있습니다.
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="card">
-                <div class="card-header" id="headingThree">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
-                            aria-expanded="false" aria-controls="collapseThree">
-                            #3
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                    <div class="card-body">
-                        Anim
+                <div class="card">
+                    <div class="card-header" id="headingThree">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
+                                aria-expanded="false" aria-controls="collapseThree" style="color:#000;">
+                                후원 계좌
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                        <div class="card-body">
+                            대표님께 여쭤보고 답변 기다리는 중.
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!--//아코디언 메뉴-->
-    <div class="col-md-6 col-sm-6 col-xs-12">
-            <form role="form">
-                <div class="form-group">
-                    <label for="inputName">성명</label>
-                    <input type="text" class="form-control" id="inputName" placeholder="이름을 입력해 주세요">
-                </div>
-                <div class="form-group">
-                    <label for="inputMobile">연락처</label>
-                    <input type="tel" class="form-control" id="inputMobile" placeholder="휴대폰번호를 입력해 주세요">
-                </div>
-                <div class="form-group">
-                    <label for="InputEmail">이메일 주소</label>
-                    <input type="email" class="form-control" id="InputEmail" placeholder="이메일 주소를 입력해주세요">
-                </div>
-                <div class="form-group">
-                    <label for="exampleFormControlTextarea1">내용</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="후원 내용 및 문의 사항"
-                        rows="3"></textarea>
-                </div>
-                <div class="form-group form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">개인정보 수집 동의</label>
-                    <p style="font-size: 13px;">후원자의 인적사항을 기록하기 위해 또는 문의사항 접수 및 처리를 위해 위와 같이 개인정보를 수집합니다.<br>
-                        개인정보 수집 동의를 거부할 수있으며, 거부시 문의가 불가할 수 있습니다.</p>
-                </div>
-                <div class="form-group text-center">
-                    <button type="submit" id="join-submit" class="btn btn-primary">
-                        보내기<i class="fa fa-check spaceLeft"></i>
-                    </button>
-                    <button type="submit" class="btn btn-warning">
-                        취소<i class="fa fa-times spaceLeft"></i>
-                    </button>
-                </div>
-            </form>
+        <!--//아코디언 메뉴-->
+        <div class="col-md-6 col-sm-6 col-xs-12">
+                <h5 class="text-center">후원자 정보 기록 및 문의 사항</h5>
+                <form role="form">
+                    <div class="form-group">
+                        <label for="inputName">성명</label>
+                        <input type="text" class="form-control" id="inputName" placeholder="이름을 입력해 주세요">
+                    </div>
+                    <div class="form-group">
+                        <label for="inputMobile">연락처</label>
+                        <input type="tel" class="form-control" id="inputMobile" placeholder="휴대폰번호를 입력해 주세요">
+                    </div>
+                    <div class="form-group">
+                        <label for="InputEmail">이메일 주소</label>
+                        <input type="email" class="form-control" id="InputEmail" placeholder="이메일 주소를 입력해주세요">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">내용</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="후원 내용 및 문의 사항"
+                            rows="3"></textarea>
+                    </div>
+                    <div class="form-group form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">개인정보 수집 동의</label>
+                        <p style="font-size: 13px;">후원자의 인적사항을 기록하기 위해 또는 문의사항 접수 및 처리를 위해 위와 같이 개인정보를 수집합니다.<br>
+                            개인정보 수집 동의를 거부할 수있으며, 거부시 문의가 불가할 수 있습니다.</p>
+                    </div>
+                    <div class="form-group text-center">
+                        <button type="submit" id="join-submit" class="btn btn-primary">
+                            보내기<i class="fa fa-check spaceLeft"></i>
+                        </button>
+                        <button type="submit" class="btn btn-warning">
+                            취소<i class="fa fa-times spaceLeft"></i>
+                        </button>
+                    </div>
+                </form>
+        </div>
     </div>
     <!--//후원 참여자 정보 기록-->
 </div>
