--- a/home/templates/map.html
+++ b/home/templates/map.html
@@ -4,9 +4,10 @@
 {%block content %}
 <div class="container">
     <h2 class="text-center">오시는 길</h1>
-    <div class="row" style="padding-top: 20px;">
+    <hr>
+    <div class="row">
         <!--지도 시작-->
-        <div class="col-sm-8 col-xs-12">
+        <div class="col-sm-8">
 
             <div id="daumRoughmapContainer1606110905572" class="col-sm-8 root_daum_roughmap root_daum_roughmap_landing">
             </div>
@@ -28,16 +29,16 @@
         <!--//지도 끝 -->
 
         <!--연락처 및 주소-->
-        <div class="col-sm-4 col-xs-12" id="contact2">
-            <h4>후원 문의 및 연락처</h4>
-            <hr align="left" width="80%">
-            <h5 class="pt-2">주소</h5>
+        <div class="col-sm-4" id="contact2">
+            <h3>후원 문의 및 연락처</h3>
+            <hr align="left" width="50%">
+            <h4 class="pt-2">주소</h4>
             서울특별시 강남구 테헤란로 2길 8,<br> 4층 17호(역삼동, 마이워크 스페이스) “또봄”<br>
-            <h5 class="pt-2">연락처</h5>
+            <h4 class="pt-2">연락처</h4>
             010-9414-4879<br>
-            <h5 class="pt-2">Email</h5>
+            <h4 class="pt-2">Email</h4>
             iseeuagain17@gmail.com<br>
-            <h5 class="pt-2">YouTube</h5>
+            <h4 class="pt-2">YouTube</h4>
             "또또봄tv"<br>
         </div>
         <!--//연락처 및 주소-->
